[workspace.package]
version = "0.3.1"
edition = "2024"
authors = ["Broxus Team"]
rust-version = "1.89.0"
repository = "https://github.com/broxus/tycho-l2"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "proof-api-l2",
    "proof-api-legacy",
    "proof-api-ton",
    "sync-service",
    "ton-lite-client",
    "util",
]

[workspace.dependencies]
aes = "0.8"
ahash = "0.8.11"
aide = { version = "0.15.1", features = ["axum", "axum-tokio", "axum-json", "scalar"] }
anyhow = "1.0"
arc-swap = "1.7.1"
async-trait = "0.1"
axum = "0.8"
bytesize = "1.3.3"
clap = { version = "4.5.3", features = ["derive"] }
ctr = "0.9"
dashmap = "6.1"
ed25519-dalek = "2.1.1"
fdlimit = "0.3"
futures-util = "0.3.31"
generic-array = "0.14.7"
governor = "0.10.0"
http = "1.3.1"
humantime = "2.2"
num-bigint = "0.4.6"
num-traits = "0.2"
rand = "0.9"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false }
rlimit = "0.10.1"
schemars = "0.9.0"
scopeguard = "1.2"
serde = "1.0"
serde_json = "1.0.114"
sha2 = "0.10"
thiserror = "2.0"
tl-proto = "0.5.3"
tokio = { version = "1", default-features = false }
tower = "0.5"
tower-http = "0.6"
tower-service = "0.3.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tycho-crypto = "0.4"
tycho-types = { version = "0.3.0", default-features = false }
weedb = "0.6.0"

tikv-jemallocator = { version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
] }

tycho-block-util = { git = "https://github.com/broxus/tycho.git", rev = "f541531d0b38d21922cbb01ac372432459277959" }
tycho-core = { git = "https://github.com/broxus/tycho.git", rev = "f541531d0b38d21922cbb01ac372432459277959" }
tycho-storage = { git = "https://github.com/broxus/tycho.git", rev = "f541531d0b38d21922cbb01ac372432459277959" }
tycho-util = { git = "https://github.com/broxus/tycho.git", rev = "f541531d0b38d21922cbb01ac372432459277959" }

tycho-vm = { git = "https://github.com/broxus/tycho-vm.git", rev = "56a7eb8e6854087881eb3ff269b4d8b8663458a5" }

# local deps
proof-api-util = { path = "./util" }
ton-lite-client = { path = "./ton-lite-client" }

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
disallowed_methods = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
print_stdout = "warn"
print_stderr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
string_add_assign = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
