[package]
name = "proof-api-l2"
description = "Transaction proof builder for L2."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
aide = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }
bytesize = { workspace = true, features = ["serde"] }
clap = { workspace = true }
fdlimit = { workspace = true }
futures-util = { workspace = true }
humantime = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rlimit = { workspace = true }
schemars = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["timeout", "cors"] }
tracing = { workspace = true }
tycho-types = { workspace = true, features = ["sync", "tycho", "models", "rand9", "base64"] }
weedb = { workspace = true }

tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
    "profiling",
] }

tycho-block-util = { workspace = true }
tycho-core = { workspace = true, features = ["cli"] }
tycho-storage = { workspace = true }
tycho-util = { workspace = true, features = ["cli"] }

proof-api-util = { workspace = true, features = ["api"] }

[build-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
