[package]
name = "sync-service"
description = "A service to sync keyblocks between networks."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
arc-swap = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
futures-util = { workspace = true }
metrics = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["http2", "json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tycho-types = { workspace = true, features = [
    "tycho",
    "abi",
    "models",
    "base64",
    "serde",
    "sync",
] }

tycho-util = { workspace = true, features = ["cli"] }
tycho-vm = { workspace = true }

tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
] }

proof-api-util = { workspace = true }
ton-lite-client = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
